# obs-monitor-switcher

./: README.md  example-config.toml  pyproject.toml
.ortfo/: description.md
obs_monitor_switcher/: __init__.py  config.py  core.py  obs.py
obs_monitor_switcher/listeners/: __init__.py  hyprland.py
